--- a/Airport/AndroidManifest.xml
+++ b/Airport/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/air_flight_state_icon"
+        android:icon="@drawable/logo"
         android:label="无锡机场"
         android:theme="@style/AppTheme" >
         <activity
